--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header class="cd-header">
-		<div id="cd-logo"><a href="#0"><img src="https://lh6.googleusercontent.com/jJw2chsv9iQvAkuDlrl3g1vcvzO-1lurFL_Zbq1eUdegrRes_yQ8RltUS-Y1_4WiQnJLOA=s190" alt="Logo"></a></div>
+		<div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
 
 		<nav class="cd-main-nav">
 			<ul>
