--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header class="cd-header">
-		<div id="cd-logo"><a href="#0"><img src="img/cd-logo.svg" alt="Logo"></a></div>
+		<div id="cd-logo"><a href="#0"><img src="http://codyhouse.co/demo/alternate-fixed-scroll-background/img/cd-logo.svg" alt="Logo"></a></div>
 
 		<nav class="cd-main-nav">
 			<ul>
