--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 	<main class="cd-main-content">
 		<div class="cd-fixed-bg cd-bg-1">
-			<h1>Ian Pike's Website.</h1>
+			<h1>Ian Pike's Website</h1>
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-2">
