--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
 
 	<main class="cd-main-content">
 		<div class="cd-fixed-bg cd-bg-1">
-			<h1>Ian Pike's Website</h1>
+			<h1 class="cd-headline rotate-1">
+				<span>My name is Ian and I'm</span>
+				<span class="cd-words-wrapper">
+					<b class="is-visible">Cool</b>
+					<b>Super Cool</b>
+					<b>The Coolest</b>
+				</span>
+			</h1>
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-2">
