--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
 	<script src="js/modernizr.js"></script> <!-- Modernizr -->
   	
-	<title>Ian Pike's Website.</title>
+	<title>The Pike Project</title>
 </head>
 <body>
 	<header class="cd-header">
@@ -31,11 +31,11 @@
 	<main class="cd-main-content">
 		<div class="cd-fixed-bg cd-bg-1">
 			<h1 class="cd-headline rotate-1">
-				<span>My name is Ian and I'm</span>
 				<span class="cd-words-wrapper">
-					<b class="is-visible">Cool</b>
-					<b>Super Cool</b>
-					<b>The Coolest</b>
+					<b class="is-visible">Greetings</b>
+					<b>Bienvenido</b>
+					<b>Grüß Gott</b>
+					<b>敬愛的</b>
 				</span>
 			</h1>
 		</div> <!-- cd-fixed-bg -->
