--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<b class="is-visible">Greetings</b>
 					<b>Bienvenido</b>
 					<b>Grüß Gott</b>
-					<b>  敬愛的</b>
+					<b>&nbsp;&nbsp;敬愛的</b>
 				</span>
 			</h1>
 		</div> <!-- cd-fixed-bg -->
