--- a/index.html
+++ b/index.html
@@ -43,38 +43,40 @@
 		<div class="cd-scrolling-bg cd-color-2">
 			<div class="cd-container">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur autem laborum fuga quas ipsam doloribus sequi, mollitia, repellendus sapiente repudiandae labore rerum amet culpa inventore, modi non. Quo nisi veritatis vitae nam, labore fugit. Inventore culpa iusto, officia exercitationem. Voluptates quibusdam odit odio incidunt consequatur, consectetur aspernatur optio vitae molestias, quas repellendus fugit ullam culpa, eligendi et dignissimos voluptatibus illum? Molestias aliquam nostrum quasi ipsa culpa, iusto explicabo ut error, consequuntur enim temporibus, adipisci tempora voluptate, id consequatur mollitia eveniet blanditiis. Illo quod repellendus alias? Cum rem doloremque adipisci accusantium? Saepe, necessitatibus!
+					Welcome! My name is Ian, I wanted to personally thank you for taking intrest in me as you are visiting my website. Since I am sure you wish to know plenty about me I will get right to the point. This front page is organized in sections based off of highlights of myself and the many things I strive to do! If you wish to contact me you can reach me <b>@</b> <em>ianpike98@gmail.com</em> or if you want to speak with me personally you can contact my skype <em><b>@</b>iangame4</em>, but please tell me who you are in detail before calling my skype or messaging me further as I speak with many people and it can get confusing if a random person messages me. All I can say is thank you truly for taking the time to visit my site.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-2">
-			<h2>Lorem ipsum dolor sit amet.</h2>
+			<h2>I love technology</h2>
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-3">
 			<div class="cd-container">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur autem laborum fuga quas ipsam doloribus sequi, mollitia, repellendus sapiente repudiandae labore rerum amet culpa inventore, modi non. Quo nisi veritatis vitae nam, labore fugit. Inventore culpa iusto, officia exercitationem. Voluptates quibusdam odit odio incidunt consequatur, consectetur aspernatur optio vitae molestias, quas repellendus fugit ullam culpa, eligendi et dignissimos voluptatibus illum? Molestias aliquam nostrum quasi ipsa culpa, iusto explicabo ut error, consequuntur enim temporibus, adipisci tempora voluptate, id consequatur mollitia eveniet blanditiis. Illo quod repellendus alias? Cum rem doloremque adipisci accusantium? Saepe, necessitatibus!
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur autem laborum fuga quas ipsam doloribus sequi, mollitia, repellendus sapiente repudiandae labore rerum amet culpa inventore, modi non. Quo nisi veritatis vitae nam, labore fugit. Inventore culpa iusto, officia exercitationem. Voluptates quibusdam odit odio incidunt consequatur, consectetur aspernatur optio vitae molestias, quas repellendus fugit ullam culpa, eligendi et dignissimos voluptatibus illum? Molestias aliquam nostrum quasi ipsa culpa, iusto explicabo ut error, consequuntur enim temporibus, adipisci tempora voluptate, id consequatur mollitia eveniet blanditiis. Illo quod repellendus alias? Cum rem doloremque adipisci accusantium? Saepe, necessitatibus!
+					I love technology and am activly at a colledge completing courses in CIS. My goals for my future is to graduate with a degree in computer science and work in the video game design industry. Technology is my life and I plan to stick with it till the end. On another note, I am constantly working and striving to broaden my knowledge of the tech world and be as activly involved in it as humanly possible. I have also learned many skills in my quest to further my knowledge including have self taught myself HTML, JavaScript and many more languages. My goal is to learn and grow even further in the tech industry and possibly one day form my own company.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-3">
-			<h2>Lorem ipsum dolor sit amet.</h2>
+			<h2>Music is a passion of mine</h2>
 		</div> <!-- cd-fixed-bg -->
 
 		<div class="cd-scrolling-bg cd-color-1">
 			<div class="cd-container">
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore incidunt suscipit similique, dolor corrupti cumque qui consectetur autem laborum fuga quas ipsam doloribus sequi, mollitia, repellendus sapiente repudiandae labore rerum amet culpa inventore, modi non. Quo nisi veritatis vitae nam, labore fugit. Inventore culpa iusto, officia exercitationem. Voluptates quibusdam odit odio incidunt consequatur, consectetur aspernatur optio vitae molestias, quas repellendus fugit ullam culpa, eligendi et dignissimos voluptatibus illum? Molestias aliquam nostrum quasi ipsa culpa, iusto explicabo ut error, consequuntur enim temporibus, adipisci tempora voluptate, id consequatur mollitia eveniet blanditiis. Illo quod repellendus alias? Cum rem doloremque adipisci accusantium? Saepe, necessitatibus!
+					I have dedicated a large chunk of my life to the musical arts and I have performed in front of audiences within the thousands. I am a Percussionist and I specialize in Marimba as I have played Marimba for many groups. Some of the many groups I have performed for currently is NDC Winds, WSH Marching Band, Legends Drum and Bugle Core and many more planned to come. My dream is to play for the world clss group The Bluecoats and maybe even win first at DCI World Championships. This is a dream of mine I am activly working to achive and I plan to succeed to this endevor.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-4">
-			<h2>Lorem ipsum dolor sit amet.</h2>
+			<h2>And I plan to keep on growing and exapanding</h2>
+			<h3>I hope to be remembered for the things I have </br>
+			done and I one day hope people will look back and </br>
+			think of the legacy I wish to create.</h3>
 		</div> <!-- cd-fixed-bg -->
 	</main> <!-- cd-main-content -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
