--- a/index.html
+++ b/index.html
@@ -43,7 +43,13 @@
 		<div class="cd-scrolling-bg cd-color-2">
 			<div class="cd-container">
 				<p>
-					Welcome! My name is Ian, I wanted to personally thank you for taking intrest in me as you are visiting my website. Since I am sure you wish to know plenty about me I will get right to the point. This front page is organized in sections based off of highlights of myself and the many things I strive to do! If you wish to contact me you can reach me <b>@</b> <em>ianpike98@gmail.com</em> or if you want to speak with me personally you can contact my skype <em><b>@</b>iangame4</em>, but please tell me who you are in detail before calling my skype or messaging me further as I speak with many people and it can get confusing if a random person messages me. All I can say is thank you truly for taking the time to visit my site.
+					Welcome! My name is Ian, I wanted to personally thank you for taking intrest in me as you are visiting my website. 
+					Since I am sure you wish to know plenty about me I will get right to the point. This front page is organized in sections 
+					based off of highlights of myself and the many things I strive to do! If you wish to contact me you can reach me <b>@</b>
+					<em>ianpike98@gmail.com</em> or if you want to speak with me personally you can contact my skype <em><b>@</b>iangame4</em>,
+					but please tell me who you are in detail before calling my skype or messaging me further as I speak with many people 
+					and it can get confusing if a random person messages me. All I can say is thank you truly for taking the time to visit 
+					my site.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
@@ -55,7 +61,12 @@
 		<div class="cd-scrolling-bg cd-color-3">
 			<div class="cd-container">
 				<p>
-					I love technology and am activly at a colledge completing courses in CIS. My goals for my future is to graduate with a degree in computer science and work in the video game design industry. Technology is my life and I plan to stick with it till the end. On another note, I am constantly working and striving to broaden my knowledge of the tech world and be as activly involved in it as humanly possible. I have also learned many skills in my quest to further my knowledge including have self taught myself HTML, JavaScript and many more languages. My goal is to learn and grow even further in the tech industry and possibly one day form my own company.
+					I love technology and am activly at a college completing courses in CIS. 
+					My goals for my future is to graduate with a degree in computer science and work in the video game design industry. 
+					Technology is my life and I plan to stick with it till the end. On another note, I am constantly working and striving 
+					to broaden my knowledge of the tech world and be as activly involved in it as humanly possible. I have also learned many
+					skills in my quest to further my knowledge including have self taught myself HTML, JavaScript and many more languages. 
+					My goal is to learn and grow even further in the tech industry and possibly one day form my own company.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
@@ -67,7 +78,11 @@
 		<div class="cd-scrolling-bg cd-color-1">
 			<div class="cd-container">
 				<p>
-					I have dedicated a large chunk of my life to the musical arts and I have performed in front of audiences within the thousands. I am a Percussionist and I specialize in Marimba as I have played Marimba for many groups. Some of the many groups I have performed for currently is NDC Winds, WSH Marching Band, Legends Drum and Bugle Core and many more planned to come. My dream is to play for the world clss group The Bluecoats and maybe even win first at DCI World Championships. This is a dream of mine I am activly working to achive and I plan to succeed to this endevor.
+					I have dedicated a large chunk of my life to the musical arts and I have performed in front of audiences within the 
+					thousands. I am a Percussionist and I specialize in Marimba as I have played Marimba for many groups. Some of the 
+					many groups I have performed for currently is NDC Winds, WSH Marching Band, Legends Drum and Bugle Core and many more 
+					planned to come. My dream is to play for the world calss group The Bluecoats and maybe even win first at DCI World 
+					Championships. This is a dream of mine I am activly working to achive and I plan to succeed in this endevor.
 				</p>
 			</div> <!-- cd-container -->
 		</div> <!-- cd-scrolling-bg -->
