--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-4">
-			<h2>And I plan to keep on growing and exapanding</h2>
+			<h2>And I plan to keep on growing and expanding</h2>
 			<h3>I hope to be remembered for the things I have </br>
 			done and I one day hope people will look back and </br>
 			think of the legacy I wish to create.</h3>
