--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
 
 		<div class="cd-fixed-bg cd-bg-4">
 			<h2>And I plan to keep on growing and expanding</h2>
-			<h2 style="font-size:28;display:block;">I hope to be remembered for the things I have </br>
-			done and I one day hope people will look back and </br>
-			think of the legacy I wish to create.</h2>
+			<div style="diplay:block;">
+				<h2 style="font-size:28;">I hope to be remembered for the things I have </br>
+				done and I one day hope people will look back and </br>
+				think of the legacy I wish to create.</h2>
+			</div>
 		</div> <!-- cd-fixed-bg -->
 	</main> <!-- cd-main-content -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
