--- a/index.html
+++ b/index.html
@@ -88,12 +88,12 @@
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-4">
-			<h2>And I plan to keep on growing and expanding</h2>
-			<div style="diplay:block;">
-				<h2 style="font-size:28;">I hope to be remembered for the things I have </br>
-				done and I one day hope people will look back and </br>
-				think of the legacy I wish to create.</h2>
-			</div>
+			<h2>And I plan to keep on growing and expanding</br>
+			<span style="font-size:20;">I hope to be remembered for the things I have </br>
+			done and I one day hope people will look back and </br>
+			think of the legacy I wish to create.</span>
+			</h2>
+			
 		</div> <!-- cd-fixed-bg -->
 	</main> <!-- cd-main-content -->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
