--- a/index.html
+++ b/index.html
@@ -88,10 +88,8 @@
 		</div> <!-- cd-scrolling-bg -->
 
 		<div class="cd-fixed-bg cd-bg-4">
-			<h2>And I plan to keep on growing and expanding</br>
-			<span style="font-size:20;">I hope to be remembered for the things I have </br>
-			done and I one day hope people will look back and </br>
-			think of the legacy I wish to create.</span>
+			<h2>And I plan to keep on growing and expanding. 
+			My dreams are endless and only the future will tell me what I can do.
 			</h2>
 			
 		</div> <!-- cd-fixed-bg -->
