--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 					<b class="is-visible">Greetings</b>
 					<b>Bienvenido</b>
 					<b>Grüß Gott</b>
+					<b>Bon jour</b>
 					<b><pre>  敬愛的</pre></b>
 				</span>
 			</h1>
