--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 			<ul>
 				<!-- inser more links here -->
 				<li><a href="#0">Home</a></li>
-				<li><a href="#0">About</a></li>
-				<li><a href="#0">Pricing</a></li>
-				<li><a href="#0">Gallery</a></li>
-				<li><a href="#0">Contact</a></li>
+				<li><a href="#0">My Projects</a></li>
+				<li><a href="#0">Bio</a></li>
+				<li><a href="#0">Personal Blog</a></li>
+				<li><a href="#0">Contact Me</a></li>
 			</ul>
 		</nav> <!-- cd-main-nav -->
 	</header>
@@ -35,7 +35,7 @@
 					<b class="is-visible">Greetings</b>
 					<b>Bienvenido</b>
 					<b>Grüß Gott</b>
-					<b>Bon jour</b>
+					<b><pre> Bon jour</pre></b>
 					<b><pre>  敬愛的</pre></b>
 				</span>
 			</h1>
