--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 	<header class="cd-header">
 		<div id="cd-logo"><a href="#0"><img src="/img/cd-logo.svg" alt="Logo"></a></div>
 
-		<nav class="cd-main-nav">
-			<ul>
-				<!-- inser more links here -->
-				<li><a href="#0">Home</a></li>
-				<li><a href="#0">My Projects</a></li>
-				<li><a href="#0">Bio</a></li>
-				<li><a href="#0">Personal Blog</a></li>
-				<li><a href="#0">Contact Me</a></li>
-			</ul>
-		</nav> <!-- cd-main-nav -->
+	<nav>
+		<ul class="cd-primary-nav">
+			<li><a href="#0">The team</a></li>
+			<li><a href="#0">Our services</a></li>
+			<li><a href="#0">Our projects</a></li>
+			<li><a href="#0">Start a project</a></li>
+			<li><a href="#0">Join In</a></li>
+			<li><a href="#0">Create an account</a></li>
+		</ul>
+	</nav>
 	</header>
 
 	<main class="cd-main-content">
@@ -97,5 +97,6 @@
 	</main> <!-- cd-main-content -->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script> <!-- Resource jQuery -->
+	<script src="js/velocity.min.js"></script>
 </body>
 </html>
