--- a/index.html
+++ b/index.html
@@ -1,102 +1,8 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html>
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-
-	<link href='//fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
-
-	<link rel="stylesheet" href="css/reset.css"> <!-- CSS reset -->
-	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
-	<script src="js/modernizr.js" type="text/javascript"></script> <!-- Modernizr -->
-  	
-	<title>The Pike Project</title>
+	
 </head>
 <body>
-	<header class="cd-header">
-		<div id="cd-logo"><a href="#0"><img src="/img/cd-logo.svg" alt="Logo"></a></div>
-
-	<nav>
-		<ul class="cd-primary-nav">
-			<li><a href="#0">The team</a></li>
-			<li><a href="#0">Our services</a></li>
-			<li><a href="#0">Our projects</a></li>
-			<li><a href="#0">Start a project</a></li>
-			<li><a href="#0">Join In</a></li>
-			<li><a href="#0">Create an account</a></li>
-		</ul>
-	</nav>
-	</header>
-
-	<main class="cd-main-content">
-		<div class="cd-fixed-bg cd-bg-1">
-			<h1 class="cd-headline rotate-2">
-				<span class="cd-words-wrapper">
-					<b class="is-visible">Greetings</b>
-					<b>Bienvenido</b>
-					<b>Grüß Gott</b>
-					<b><pre> Bon jour</pre></b>
-					<b><pre>  敬愛的</pre></b>
-				</span>
-			</h1>
-		</div> <!-- cd-fixed-bg -->
-
-		<div class="cd-scrolling-bg cd-color-2">
-			<div class="cd-container">
-				<p>
-					Welcome! My name is Ian, I wanted to personally thank you for taking intrest in me as you are visiting my website. 
-					Since I am sure you wish to know plenty about me I will get right to the point. This front page is organized in sections 
-					based off of highlights of myself and the many things I strive to do! If you wish to contact me you can reach me <b>@</b>
-					<em>ianpike98@gmail.com</em> or if you want to speak with me personally you can contact my skype <em><b>@</b>iangame4</em>,
-					but please tell me who you are in detail before calling my skype or messaging me further as I speak with many people 
-					and it can get confusing if a random person messages me. All I can say is thank you truly for taking the time to visit 
-					my site.
-				</p>
-			</div> <!-- cd-container -->
-		</div> <!-- cd-scrolling-bg -->
-
-		<div class="cd-fixed-bg cd-bg-2">
-			<h2>I love technology</h2>
-		</div> <!-- cd-fixed-bg -->
-
-		<div class="cd-scrolling-bg cd-color-3">
-			<div class="cd-container">
-				<p>
-					I love technology and am activly at a college completing courses in CIS. 
-					My goals for my future is to graduate with a degree in computer science and work in the video game design industry. 
-					Technology is my life and I plan to stick with it till the end. On another note, I am constantly working and striving 
-					to broaden my knowledge of the tech world and be as activly involved in it as humanly possible. I have also learned many
-					skills in my quest to further my knowledge including have self taught myself HTML, JavaScript and many more languages. 
-					My goal is to learn and grow even further in the tech industry and possibly one day form my own company.
-				</p>
-			</div> <!-- cd-container -->
-		</div> <!-- cd-scrolling-bg -->
-
-		<div class="cd-fixed-bg cd-bg-3">
-			<h2>Music is a passion of mine</h2>
-		</div> <!-- cd-fixed-bg -->
-
-		<div class="cd-scrolling-bg cd-color-1">
-			<div class="cd-container">
-				<p>
-					I have dedicated a large chunk of my life to the musical arts and I have performed in front of audiences within the 
-					thousands. I am a Percussionist and I specialize in Marimba as I have played Marimba for many groups. Some of the 
-					many groups I have performed for currently is NDC Winds, WSH Marching Band, Legends Drum and Bugle Core and many more 
-					planned to come. My dream is to play for the world calss group The Bluecoats and maybe even win first at DCI World 
-					Championships. This is a dream of mine I am activly working to achive and I plan to succeed in this endevor.
-				</p>
-			</div> <!-- cd-container -->
-		</div> <!-- cd-scrolling-bg -->
-
-		<div class="cd-fixed-bg cd-bg-4">
-			<h2>And I plan to keep on growing and expanding. 
-			My dreams are endless and only the future will tell me what I can do.
-			</h2>
-			
-		</div> <!-- cd-fixed-bg -->
-	</main> <!-- cd-main-content -->
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script> <!-- Resource jQuery -->
-	<script src="js/velocity.min.js"></script>
+	<p>This website is a work in progress.</p>
 </body>
 </html>
