--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 			 of the website in an entirity. I want to shoot for a minimilistic
 			 design with the website.
 		-->
+		<p>This website is a work in progress.</br>
+		   Come back later for future updates!</p>
 	</div>
 	<div class="footer">
 		
