--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</div>
 	<div class="Main">
 		<!-- This will act as the main body of the entire website more will be
-			 added div wise but I will work on prioitizing the look and design
+			 added div wise but I will work on prioritizing the look and design
 			 of the website in an entirity. I want to shoot for a minimilistic
 			 design with the website.
 		-->
