--- a/index.html
+++ b/index.html
@@ -1,28 +1,22 @@
 <!-- 
 	Copyright (C) Ian Pike - DO NOT DISTRIBUTE
 	File: index.html
-	Date: 12/17/2015
+	Date: 09/20/2016
 	Purpose: To create the homepage to my website
  -->
 <!DOCTYPE html>
 <head>
 	<title>Under Construction</title>
+	<link rel="stylesheet" href="/css/voronoi.3.css"
 </head>
 <body>
-	<div class="Header">
-		
+	<canvas></canvas>
+	<div class="alt">
+		<h1>Voronoi</h1>
+		<p class="about"></p>
+		<p>Please upgrade your web browser!<br>Get <a href="https://www.google.com/chrome/browser/desktop/" rel="nofollow" target="_top">Google&nbsp;Chrome</a> or <a href="https://www.mozilla.org/firefox/" rel="nofollow" target="_top">Mozilla&nbsp;Firefox</a>.</p>
 	</div>
-	<div class="Main">
-		<!-- This will act as the main body of the entire website more will be
-			 added div wise but I will work on prioritizing the look and design
-			 of the website in an entirity. I want to shoot for a minimilistic
-			 design with the website.
-		-->
-		<p>This website is a work in progress.</br>
-		   Come back later for future updates!</p>
-	</div>
-	<div class="footer">
-		
-	</div>
+	<script src="/js/voronoi.3.js"></script>
+	<script src="/js/ga.js"></script>
 </body>
 </html>
