--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
 	Purpose: To create the homepage to my website
  -->
 <!DOCTYPE html>
-<head>
+<head lang="en">
 	<title>Under Construction</title>
+	
+	
+	<meta name="application-name" content="Voronoi">
+	<meta name="msapplication-TileImage" content="https://neave.com/voronoi/assets/images/icon-400.png">
+	<meta name="msapplication-TileColor" content="#000">
+	
 	<link rel="stylesheet" href="/css/voronoi.3.css"
 </head>
 <body>
