--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	
 	
 	<meta name="application-name" content="Voronoi">
-	<meta name="msapplication-TileImage" content="https://neave.com/voronoi/assets/images/icon-400.png">
+	<meta name="msapplication-TileImage" content="https://ianpike.com/assets/images/icon-400.png">
 	<meta name="msapplication-TileColor" content="#000">
 	
 	<link rel="stylesheet" href="/css/voronoi.3.css"
