--- a/index.html
+++ b/index.html
@@ -5,10 +5,28 @@
 	Purpose: To create the homepage to my website
  -->
 <!DOCTYPE html>
-<head lang="en">
+<html lang="en">
+<head>
+  <title>Ian Pike, Dreamer.</title>
+  
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1, minimal-ui" />
 
+  <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+  <link rel="dns-prefetch" href="//code.jquery.com" />
+
+  <link href='//fonts.googleapis.com/css?family=Roboto:400,100,400italic,700italic,700' rel='stylesheet' type='text/css'>
+
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-
+  <header class="site_header island">
+  <div class="wrap">
+   <span id="animationSandbox" style="display: block;"><h1 class="site_title mega">Ian Pike.</h1></span>
+    <span class="beta subhead">Developer, Designer, Dreamer.</span>
+  </div>
+</header><!-- /.site__header -->
+<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 </body>
 </html>
