--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="site_header island">
+  <header class="site__header island">
   <div class="wrap">
-   <span id="animationSandbox" style="display: block;"><h1 class="site_title mega">Ian Pike.</h1></span>
+   <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike.</h1></span>
     <span class="beta subhead">Developer, Designer, Dreamer.</span>
   </div>
 </header><!-- /.site__header -->
