--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="site__header island">
+  <div class="site__header island">
   <div class="wrap">
    <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike.</h1></span>
     <span class="beta subhead">Developer, Designer, Dreamer.</span>
   </div>
-</header><!-- /.site__header -->
+</div><!-- /.site__header -->
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 <script>
   function testAnim(x) {
