--- a/index.html
+++ b/index.html
@@ -21,12 +21,22 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="site__header island">
+  <header class="site__header island">
   <div class="wrap">
    <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike.</h1></span>
     <span class="beta subhead">Developer, Designer, Dreamer.</span>
   </div>
-</div><!-- /.site__header -->
+</header><!-- /.site__header -->
+<main class="site__content island" role="content">
+  <div class="wrap">
+    <form>
+    </form>
+    <hr />
+    <p class="meta"><a href="https://raw.github.com/daneden/animate.css/master/animate.css" download="animate.css">Download Animate.css</a> or <a href="//github.com/daneden/animate.css">View on GitHub</a></p>
+    <p><small>Another thing from <a href="//daneden.me">Daniel Eden</a>.</small></p>
+  </div>
+</main><!-- /.site__content -->
+
 <script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
 <script>
   function testAnim(x) {
