--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
   <div class="container"
     <div class="wrap">
-      <span id="sitelogo" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
+      <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
       <span class="beta subhead">Some cool guy.</span>
     </div>
   </div>
