--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class="container"
     <div class="wrap">
       <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
-      <span class="beta subhead">Some cool guy.</span>
+      <span class="beta subhead">This website is a wip</span>
     </div>
   </div>
 </body>
