--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="wrap">
       <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
       <span class="beta subhead">This is the homepage of Ian Pike's Website.</span>
+      <p>This Website is a Work-In-Progress.</p>
     </div>
   </div>
 </body>
