--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Welcome.</title>
+  <title>The Home of Ian Pike</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="initial-scale=1, minimal-ui" />
+  <meta name="description" content="This is the website of Ian Pike, an aspiring programmer and designer. Look back for projects he does and programs he make." />
 
   <link rel="dns-prefetch" href="//fonts.googleapis.com" />
   <link rel="dns-prefetch" href="//code.jquery.com" />
