--- a/404/index.html
+++ b/404/index.html
@@ -1,1 +1,10 @@
-
+<html>
+  <head>
+    <title>ERROR 404</title>
+    <meta name="robots" content="noindex">
+  </head>
+  <body>
+    <h1>ERROR 404</h1>
+    <p>Seems like your in the wrong place.</p>
+  </body>
+</html>
