--- a/404/index.html
+++ b/404/index.html
@@ -6,5 +6,6 @@
   <body>
     <h1>ERROR 404</h1>
     <p>Seems like your in the wrong place.</p>
+    <a href="http://ianpike.com/">Take me back home!</a>
   </body>
 </html>
