--- a/index.html
+++ b/index.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>The Home of Ian Pike</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="initial-scale=1, minimal-ui" />
-  <meta name="description" content="This is the website of Ian Pike, an aspiring programmer and designer. Look back for projects he does and programs he make." />
+  <head>
+    <title>The Home of Ian Pike</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="initial-scale=1, minimal-ui" />
+    <meta name="description" content="This is the website of Ian Pike, an aspiring programmer and designer. Look back for projects he does and programs he make." />
 
-  <link rel="dns-prefetch" href="//fonts.googleapis.com" />
-  <link rel="dns-prefetch" href="//code.jquery.com" />
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//code.jquery.com" />
 
-  <link href='//fonts.googleapis.com/css?family=Roboto:400,100,400italic,700italic,700' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Roboto:400,100,400italic,700italic,700' rel='stylesheet' type='text/css'>
 
-  <link rel="stylesheet" href="animate.min.css" />
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <div class="container"
-    <div class="wrap">
-      <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
-      <span class="beta subhead">This is the homepage of Ian Pike's Website.</span>
-      <p>This Website is a Work-In-Progress.</p>
+    <link rel="stylesheet" href="animate.min.css" />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="wrap">
+        <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
+        <span class="beta subhead">This is the homepage of Ian Pike's Website.</span>
+        <form>
+          <button class="butt js--triggerAnimation">Animate it</button>
+        </form>
+        <p>This Website is a Work-In-Progress.</p>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
