--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <div class="wrap">
         <span id="animationSandbox" style="display: block;"><h1 class="site__title mega">Ian Pike</h1></span>
         <span class="beta subhead">This is the homepage of Ian Pike's Website.</span>
+        <hr>
         <form>
-          <button class="butt js--triggerAnimation">Animate it</button>
+          <button class="butt js--triggerAnimation">Option</button>
         </form>
         <p>This Website is a Work-In-Progress.</p>
       </div>
