--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br><br>
         <hr>
         <form>
-          <button class="butt">Option</button>
+          <button class="butt" onClick="parent.location='index.html'">Option</button>
         </form>
         <p>This Website is a Work-In-Progress.</p>
       </div>
