--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
           <button class="butt" onClick="parent.location='index.html'">Option</button>
         </form>
         <p>This Website is a Work-In-Progress.</p>
+        <p>Content on this page is not a final product.
+        <p>Expect Mistakes, broken code, and graphical errors.
       </div>
     </div>
   </body>
