--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         <form>
           <button class="butt" onClick="parent.location='index.html'">Option</button>
         </form>
-        <p>This Website is a Work-In-Progress.</p>
-        <p>Content on this page is not a final product.
-        <p>Expect Mistakes, broken code, and graphical errors.
+        <p style="font-size: 5px;">This Website is a Work-In-Progress.</p>
+        <p style="font-size: 5px;">Content on this page is not a final product.
+        <p style="font-size: 5px;">Expect Mistakes, broken code, and graphical errors.
       </div>
     </div>
   </body>
