--- a/index.html
+++ b/index.html
@@ -24,9 +24,11 @@
         <form>
           <button class="butt" onClick="parent.location='index.html'">Option</button>
         </form>
-        <p style="font-size: 8px;">This Website is a Work-In-Progress.</p>
-        <p style="font-size: 8px;">Content on this page is not a final product.
-        <p style="font-size: 8px;">Expect Mistakes, broken code, and graphical errors.
+        <ul>
+          <p style="font-size: 11px;">This Website is a Work-In-Progress.</p>
+          <p style="font-size: 11px;">Content on this page is not a final product.</p>
+          <p style="font-size: 11px;">Expect Mistakes, broken code, and graphical errors.</p>
+        </ul>
       </div>
     </div>
   </body>
