--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
           <button class="butt" onClick="parent.location='index.html'">Option</button>
         </form>
         <ul>
-          <p style="font-size: 11px;">This Website is a Work-In-Progress.</p>
-          <p style="font-size: 11px;">Content on this page is not a final product.</p>
-          <p style="font-size: 11px;">Expect Mistakes, broken code, and graphical errors.</p>
+          <p style="font-size: 11px; margin-top: 5px; margin-bottom: 5px;">This Website is a Work-In-Progress.</p>
+          <p style="font-size: 11px; margin-top: 5px; margin-bottom: 5px;">Content on this page is not a final product.</p>
+          <p style="font-size: 11px; margin-top: 5px; margin-bottom: 5px;">Expect Mistakes, broken code, and graphical errors.</p>
         </ul>
       </div>
     </div>
