--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <br><br>
         <hr>
         <form>
-          <button class="butt" onClick="parent.location='index.html'">Option</button>
+          <button class="butt" type="submit" >Option</button>
         </form>
         <ul>
           <p style="font-size: 11px; margin-top: 5px; margin-bottom: 5px;">This Website is a Work-In-Progress.</p>
