--- a/pages/meme/index.html
+++ b/pages/meme/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-
+  <link rel="stylesheet" href="main.css">
 </head>
-<body style="background-image: url("meme.gif"); background-repeat: repeat-y;">
+<body>
 
 </body>
 </html>
