--- a/pages/lavatest/index.html
+++ b/pages/lavatest/index.html
@@ -1,3 +1,8 @@
+<html>
+<head>
+     <link rel="stylesheet" href="lava.css">
+     <script src="lava.js"></script>
+</head>
 <body>
 <svg version="1.1"
      xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
@@ -118,3 +123,4 @@
   </g>
 </svg>
 </body>
+</html>
