--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <h1>navbar</h1>
         <ul>
            <li><a href="#home"><i class="fa fa-terminal"></i>home</a></li>
-           <li><a href="#about"><i class="fa fa-codepen"></i>about</a></li>
-           <li><a href="#news"><i class="fa fa-newspaper-o"></i>news</a></li>
+           <li><a href="#resume"><i class="fa fa-codepen"></i>resume</a></li>
+           <li><a href="#portfolio"><i class="fa fa-newspaper-o"></i>portfolio</a></li>
            <li><a href="#contact"><i class="fa fa-paper-plane-o"></i>contact</a></li>
         </ul>
       </div>
