Improvements to starfield

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="wrapper">
         <!-- Sidebar Menu -->
         <div class="menu">
-            <h1>Navbar</h1>
+            <h1>Check me out</h1>
             <ul>
                 <li><a href="#home"><i class="fa fa-terminal"></i> Home</a></li>
                 <li><a href="#resume"><i class="fa fa-codepen"></i> Resume</a></li>
@@ -26,7 +26,7 @@
         </div>
 
         <!-- Main Content -->
-        <div class="content">
+        <div class="header-content">
             <div class="button">
                 <div class="line first top"></div>
                 <div class="line second bottom"></div>
