--- a/index.html
+++ b/index.html
@@ -113,19 +113,24 @@
                         <button class="tab" onclick="showTab('awards')">Awards & Honors</button>
                     </div>
                     <div class="tab-content active" id="skills">
-                        <h2>Languages</h2>
+                        <h2>Programming Experience</h2>
                         <ul>
-                            <li>C++</li>
-                            <li>C</li>
-                            <li>C#</li>
-                            <li>Python</li>
-                            <li>Java</li>
+                            <li>C++    - 2 years</li>
+                            <li>C      - 2 years</li>
+                            <li>C#     - 4 years</li>
+                            <li>Python - 2 years</li>
                         </ul>
-                        <h2>Game Engines</h2>
+                        <h2>Tool Experience</h2>
                         <ul>
-                            <li>Unreal Engine</li>
+                            <li>Git  - 7 years</li>
+                            <li>Jira - 1 year</li>
+                            <li>Perforce - 1 year</li>
                         </ul>
-                        <h2>Rendering APIs</h2>
+                        <h2>Game Engine Experience</h2>
+                        <ul>
+                            <li>Unreal Engine - 2 years</li>
+                        </ul>
+                        <h2>Rendering API Experience</h2>
                         <ul>
                             <li>OpenGL</li>
                             <li>Vulkan</li>
