Switch over css to scss

--- a/index.html
+++ b/index.html
@@ -126,6 +126,10 @@
                             <li>Jira - 1 year</li>
                             <li>Perforce - 1 year</li>
                         </ul>
+                        <h2>Technical Experience</h2>
+                        <ul>
+                            <li>UML</li>
+                        </ul>
                         <h2>Game Engine Experience</h2>
                         <ul>
                             <li>Unreal Engine - 2 years</li>
