Update some info and add cv

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <i class="fab fa-github"></i>
                       </a>
                     </div>
-                    <a href="path_to_cv.pdf" class="download-cv-button">Download CV</a>
+                    <a href="ianpike_cv_2025.pdf" class="download-cv-button">Download CV</a>
                   </div>                  
             </div>
             <div class="about-right-side">
@@ -115,7 +115,7 @@
                     <div class="tab-content active" id="skills">
                         <h2>Programming Experience</h2>
                         <ul>
-                            <li>C++    - 2 years</li>
+                            <li>C++    - 3 years</li>
                             <li>C      - 2 years</li>
                             <li>C#     - 4 years</li>
                             <li>Python - 2 years</li>
@@ -123,12 +123,15 @@
                         <h2>Tool Experience</h2>
                         <ul>
                             <li>Git  - 7 years</li>
+			    <li>GitHub - 7 Years</li>
+			    <li>GitLab - 1 Year</li>
                             <li>Jira - 1 year</li>
                             <li>Perforce - 1 year</li>
                         </ul>
                         <h2>Technical Experience</h2>
                         <ul>
                             <li>UML</li>
+			    <li>SDLC</li>
                         </ul>
                         <h2>Game Engine Experience</h2>
                         <ul>
