Add missing link to GH profile

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                       <a href="https://www.linkedin.com/in/ian-pike-27319083/" target="_blank">
                         <i class="fab fa-linkedin"></i>
                       </a>
-                      <a href="https://github.com" target="_blank">
+                      <a href="https://github.com/Rinzii" target="_blank">
                         <i class="fab fa-github"></i>
                       </a>
                     </div>
