move location of cv pdf to cdn

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <i class="fab fa-github"></i>
                       </a>
                     </div>
-                    <a href="ianpike_cv_2025.pdf" class="download-cv-button">Download CV</a>
+                    <a href="cdn/pdf/ianpike_cv_2025.pdf" class="download-cv-button">Download CV</a>
                   </div>                  
             </div>
             <div class="about-right-side">
