Convert to more efficient image encoding

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Ian Pike - Software Engineer Portfolio">
     <meta property="og:description" content="Discover Ian Pike's work as a software engineer. Specializing in game development, C++, and open-source contributions.">
-    <meta property="og:image" content="https://www.ianpike.com/cdn/self/marne_climbing.jpg">
+    <meta property="og:image" content="https://www.ianpike.com/cdn/self/marne_climbing.avif">
     <meta property="og:url" content="https://www.ianpike.com">
     <meta property="og:type" content="website">
 
@@ -22,7 +22,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Ian Pike - Software Engineer Portfolio">
     <meta name="twitter:description" content="Discover Ian Pike's work as a software engineer. Specializing in game development, C++, and open-source contributions.">
-    <meta name="twitter:image" content="https://www.ianpike.com/cdn/self/marne_climbing.jpg">
+    <meta name="twitter:image" content="https://www.ianpike.com/cdn/self/marne_climbing.avif">
 
     <!-- Preload used resource -->
     <link rel="preload" href="homepage.css" as="style">
@@ -70,7 +70,7 @@
                 <p>I'm a Passionate Software Engineer and Adventurer!</p>
             </div>
             <div class="profile-image-wrapper">
-                <img src="cdn/self/machine_hero_shot.jpg" alt="Profile Image" class="profile-image">
+                <img src="cdn/self/machine_hero_shot.avif" alt="Profile Image" class="profile-image">
             </div>
         </div>
     </section>
@@ -81,7 +81,7 @@
         <div class="works-grid">
             <!-- Work Item 1 - CCMATH -->
             <div class="work-item" onclick="window.open('https://github.com/Rinzii/ccmath', '_blank');">
-                <img src="cdn/works/ccmath_pane.png" alt="CCMath">
+                <img src="cdn/works/ccmath_pane.avif" alt="CCMath">
                 <div class="work-info">
                     <h2>CCMath</h2>
                     <p><em>"Compile-time math for the real world"</em></p>
@@ -127,7 +127,7 @@
             
             <!-- Work Item 2 - Genesis -->
             <div class="work-item" onclick="window.open('https://github.com/Rinzii/genesis', '_blank');">
-                <img src="cdn/works/default_github_pane.jpg" alt="Genesis">
+                <img src="cdn/works/default_github_pane.avif" alt="Genesis">
                 <div class="work-info">
                     <h2>Genesis</h2>
                     <p>A small Vulkan game engine written in C++20.</p>
@@ -150,7 +150,7 @@
             <div class="about-left-side">
                 <div class="profile-section">
                     <div class="profile-image-wrapper">
-                      <img src="cdn/self/marne_climbing.jpg" alt="Profile Picture" class="about-profile-image-rounded">
+                      <img src="cdn/self/marne_climbing.avif" alt="Profile Picture" class="about-profile-image-rounded">
                     </div>
                     <div class="social-icons">
                       <a href="https://www.linkedin.com/in/ian-pike-27319083/" target="_blank">
