--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
                 <li><a href="#contact-section">Contact</a></li>
             </ul>
             <ul class="social-links">
-                <li><a href="https://github.com/Rinzii" target="_blank"><i class="fab fa-github"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/ian-pike-27319083/" target="_blank"><i class="fab fa-linkedin"></i></a></li>
+                <li><a href="https://github.com/Rinzii" target="_blank" aria-label="GitHub of Ian Pike"><i class="fab fa-github"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/ian-pike-27319083/" target="_blank" aria-label="LinkedIn of Ian Pike"><i class="fab fa-linkedin"></i></a></li>
             </ul>
         </header>
         <div class="content-wrapper">
@@ -80,7 +80,7 @@
         <h1>Works</h1>
         <div class="works-grid">
             <!-- Work Item 1 - CCMATH -->
-            <div class="work-item" onclick="window.open('https://github.com/Rinzii/ccmath', '_blank');">
+            <div class="work-item" aria-label="Pane showcasing CCMath" onclick="window.open('https://github.com/Rinzii/ccmath', '_blank');">
                 <img src="cdn/works/ccmath_pane.avif" alt="CCMath">
                 <div class="work-info">
                     <h2>CCMath</h2>
@@ -116,7 +116,7 @@
                         <li>- All platforms and compilers extenstively tested with Google Test!</li>
                     </ul>
                     <div class="work-links">
-                        <a href="https://github.com/Rinzii/ccmath" target="_blank">
+                        <a href="https://github.com/Rinzii/ccmath" aria-label="Link to CCMath GitHub" target="_blank">
                             <i class="fab fa-github"></i> View on GitHub
                         </a>
                     </div>
@@ -126,13 +126,13 @@
             
             
             <!-- Work Item 2 - Genesis -->
-            <div class="work-item" onclick="window.open('https://github.com/Rinzii/genesis', '_blank');">
+            <div class="work-item" aria-label="Pane of Genesis a vulkan game engine" onclick="window.open('https://github.com/Rinzii/genesis', '_blank');">
                 <img src="cdn/works/default_github_pane.avif" alt="Genesis">
                 <div class="work-info">
                     <h2>Genesis</h2>
                     <p>A small Vulkan game engine written in C++20.</p>
                     <div class="work-links">
-                        <a href="https://github.com/Rinzii/genesis" target="_blank">
+                        <a href="https://github.com/Rinzii/genesis" aria-label="Link to the Genesis GitHub" target="_blank">
                             <i class="fab fa-github"></i>
                         </a>
                     </div>
