--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js" defer></script>
     <script type="text/javascript" src="background.js" defer></script>
-    <script type="text/javascript" src="about.js"></script>
+    <script type="text/javascript" src="about.js" defer></script>
 
 </body>
 </html>
